--- a/style.css
+++ b/style.css
@@ -3,11 +3,10 @@ body {
   background: linear-gradient(to bottom, #70c5ce, #ffffff);
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 0;
 }
 
 h1 {
-  margin-top: 10px;
+  margin: 10px;
 }
 
 canvas {
